--- a/appspec.yml
+++ b/appspec.yml
@@ -7,9 +7,9 @@ files:
   #  destination: /etc/nginx/sites-enabled/
 hooks:
   BeforeInstall:
-    #- location: scripts/install_dependencies
-    #  timeout: 300
-    #  runas: root
+    - location: scripts/cleanup
+      timeout: 300
+      runas: root
     #- location: scripts/restart_server
     #  timeout: 300
     #  runas: root
